tests/fixtures/invalid/continue_no_semicolon.dub
// continue missing its semicolon — parser error.
fun bad(n : int) {
    for var i = 0; i < n; ++i {
        continue
    }
}
